--- a/views/info.erb
+++ b/views/info.erb
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Info Page</h1>
-        <p>This is the info page and i currently suffer from bad gas!</p>
+        <p>This is the info page: I currently suffer from bad gas!</p>
     </body>
 </html>
